# ComfyUI_ID_Animator

./: ID_Animator_node.py  README.md  __init__.py  app.py  if miss modul check this requirements.txt  if miss module check this requirements.txt  inference-v2.yaml  pyproject.toml  requirements.txt
animatediff/models/: attention.py  attention_bkp.py  motion_module.py  motion_module_bkp.py  resnet.py  sparse_controlnet.py  unet.py  unet_blocks.py
animatediff/utils/: convert_from_ckpt.py  convert_lora_safetensor_to_diffusers.py  convert_original_stable_diffusion_to_diffusers.py  util.py
demo/: example.json
faceadapter/: attention_processor.py  face_adapter.py  resampler.py
models/adapter/: put adapter file here
models/animatediff_models/: put animatediff_models here
models/image_encoder/: config.json
