[project]
name = "comfyui_id_animator"
description = "you can using id_animator in comfyUI"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_ID_Animator"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemx"
DisplayName = "ComfyUI_ID_Animator"
Icon = ""
